--- a/app/views/events/new.html.slim
+++ b/app/views/events/new.html.slim
@@ -1,4 +1,4 @@
+= link_to 'Open general calendar', events_path, class: "btn btn-primary text-white"
 h1
-  | New Event
+  | Creating event
 = render 'form', event: @event
-= link_to 'Back', events_path
