--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -1,6 +1,6 @@
+p#notice
+  = notice
+= link_to 'To event', @event, class: "btn btn-primary text-white"
 h1
   | Editing Event
 = render 'form', event: @event
-= link_to 'Show', @event
-|  | 
-= link_to 'Back', events_path
