--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,9 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag    'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css'
+    = stylesheet_link_tag 'https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'
+
+
   body
     .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-5.text-white.border[style="background: #2F4F4F; box-shadow: 0 0 15px rgba(0, 0, 0, 0.5)"]
       h1.my-0.mr-md-auto.font-weight-bold style="font-family: 'Lucida Grande';"
@@ -26,8 +29,4 @@ html
         h2
           = link_to 'sign in', new_user_session_path, class: "btn btn-primary text-white"
     .container
-      p.notice
-        = notice
-      p.alert
-        = alert
       = yield
