--- a/app/views/users/profile.html.slim
+++ b/app/views/users/profile.html.slim
@@ -9,63 +9,42 @@ p#notice
     = link_to 'Open general calendar', events_path, class: "btn btn-primary text-white"
 h1
   | My calendar
-- if @grouped_events.present? && @grouped_events[true].present?
-  .card.border-info.mb-3
-      .card-header
-        .row
-          div.col-md-4.text-left
-            | Today
-  - @grouped_events[true].each do |event|
-      .card-body
-        .row
-          div.col-md-1.text.left
-            = event.event_datetime.strftime("%H:%M")
-          div.col-md-1
-            |  - 
-          div.col-md-4
-            = event.title
-          div.col-md-1
-            p
-              = link_to event, class: "btn btn-outline-primary"
-                i.fa.fa-info
-          div.col-md-1
-            p
-              = link_to edit_event_path(event), class: "btn btn-outline-primary"
-                i.fa.fa-edit
-          div.col-md-1
-            p
-              = link_to event, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger text-white"
-                i.fa.fa-trash
-
-/! Month wise grouped messages
-- if @month_wise_sorted_alerts.present?
-  - @month_wise_sorted_alerts.each do |hash_elements|
+- if @grouped_events.present?
+  - @grouped_events.each do |hash_elements|
     .card.border-info.mb-3
       .card-header
         .row
           div.col-md-4.text-left
-            = hash_elements.first.strftime("%A, %d %b")
+            - case hash_elements.first
+              - when DateTime.now.to_date
+                | Today
+              - when DateTime.tomorrow.to_date
+                | Tomorrow
+              - else
+                = hash_elements.first.strftime("%A, %d %b")
     - hash_elements.last.each do |event|
-      .card-body
-        .row
-          div.col-md-1.text.left
+      .card-body.container
+        div.row
+          div.col-md-1.badge.badge-info.text.center
+            = event.user.username
+          div.col-md-2.text.left
+            i.fa.fa-clock-o
+            |  
             = event.event_datetime.strftime("%H:%M")
           div.col-md-1
             |  - 
-          div.col-md-4
+          div.col-md-5
             = event.title
           div.col-md-1
             p
               = link_to event, class: "btn btn-outline-primary"
                 i.fa.fa-info
-          div.col-md-1
-            p
-              = link_to edit_event_path(event), class: "btn btn-outline-primary"
-                i.fa.fa-edit
-          div.col-md-1
-            p
-              = link_to event, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger text-white"
-                i.fa.fa-trash
-      br/
-    br/
-
+          - if signed_in? && (current_user.id == event.user_id) 
+            div.col-md-1
+              p
+                = link_to edit_event_path(event), class: "btn btn-outline-primary"
+                  i.fa.fa-edit
+            div.col-md-1
+              p
+                = link_to event, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger text-white"
+                  i.fa.fa-trash
